# c-_sdk

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  jj.md  总结.md  问题.md
.serena/: project.yml
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: ARCHITECTURE.md  DESIGN.md
docs/plans/: 2026-02-04-ros2-wrapper-design.md
include/linkerhand/: can_backend.hpp  can_dispatcher.hpp  can_message.hpp  iterable_queue.hpp  lifecycle.hpp  linkerhand.hpp  manager_base.hpp  mock_can_backend.hpp
include/linkerhand/hand/l6/: angle_manager.hpp  current_manager.hpp  fault_manager.hpp  force_sensor_manager.hpp  l6.hpp  speed_manager.hpp  temperature_manager.hpp  torque_manager.hpp
include/linkerhand/hand/o6/: angle_manager.hpp  force_sensor_manager.hpp  o6.hpp  speed_manager.hpp  temperature_manager.hpp  torque_manager.hpp
ros2/linkerhand_msgs/: CMakeLists.txt  package.xml
ros2/linkerhand_msgs/msg/: ForceSensorData.msg  ForceSensors.msg
ros2/linkerhand_ros2/: CMakeLists.txt  package.xml
ros2/linkerhand_ros2/config/: linkerhand_params.yaml
ros2/linkerhand_ros2/include/linkerhand_ros2/: linkerhand_node.hpp
ros2/linkerhand_ros2/launch/: linkerhand.launch.py
ros2/linkerhand_ros2/src/: linkerhand_node.cpp
scripts/: setup_can.sh
sdk/: CMakeLists.txt
sdk/include/linkerhand/: exceptions.hpp  iterable_queue.hpp  lifecycle.hpp
sdk/src/: can_dispatcher.cpp
sdk/src/hand/: common.hpp
sdk/src/hand/l6/: angle_manager.cpp
src/: can_backend.cpp  can_dispatcher.cpp
src/backend/: socketcan_backend.cpp  socketcan_backend.hpp
src/hand/: common.hpp
src/hand/l6/: angle_manager.cpp  current_manager.cpp  fault_manager.cpp  force_sensor_manager.cpp  l6.cpp  speed_manager.cpp  temperature_manager.cpp  torque_manager.cpp
src/hand/o6/: angle_manager.cpp  force_sensor_manager.cpp  o6.cpp  speed_manager.cpp  temperature_manager.cpp  torque_manager.cpp
tests/: test_angle.cpp  test_compile.cpp  test_force_sensor.cpp
